<resources>
    <string name="app_name">btlebeacontracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">BLE Beacon Tracker</string>
    <string name="nav_header_subtitle">jbk123456@github.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="foreground_started">started in foreground mode</string>
    <string name="error">something went wrong!</string>

    <string name="connected">connected</string>
    <string name="disconnected">disconnected</string>
    <string name="title_activity_settings">Settings</string>
    <string name="alarm">Alarm Settings</string>
    <string name="alarm_duration_title">Alarm duration</string>
    <string name="name">Name:</string>
    <string name="status">Status:</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="bat">Bat.:</string>
    <string name="unknown">unknown</string>
    <string name="rssi">Rssi:</string>
    <string name="alert">Alert!</string>
    <string name="beacons">Beacons</string>
    <string name="overview">Overview</string>
    <string name="scan">Scan</string>
    <string name="beacon">Beacon</string>
    <string name="ok">OK</string>
    <string name="scanning">Scanning…</string>
    <string name="enable_location">Please enable location settings…</string>
    <string name="no_beacons_found">No new devices found!</string>

</resources>
